# svn-file-manager

./: .gitignore  .project-notes.md  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
SVNFileManager/: App.axaml  App.axaml.cs  Program.cs  SVNFileManager.csproj  SVNFileManager.sln  SVNFileManager.slnx  ViewLocator.cs  app.manifest
SVNFileManager/Models/: FileItem.cs  Repository.cs  SvnStatus.cs
SVNFileManager/Services/: ConfigService.cs  FileWatcherService.cs  SvnService.cs
SVNFileManager/ViewModels/: Converters.cs  MainWindowViewModel.cs  ViewModelBase.cs
SVNFileManager/Views/: AboutWindow.axaml  AboutWindow.axaml.cs  CheckoutWindow.axaml  CheckoutWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SettingsWindow.axaml  SettingsWindow.axaml.cs  SettingsWindowViewModel.cs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  svn.rs  watcher.rs
src-tauri/src/commands/: clipboard.rs  drop_handler.rs  fs.rs  mod.rs  svn.rs
src/components/: ContextMenu.tsx  DropZone.tsx  ErrorBoundary.tsx  FileItem.tsx  FileList.tsx  MenuBar.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
src/stores/: repoStore.ts  settingsStore.ts
