[package]
name = "svn-file-manager"
version = "0.1.0"
edition = "2021"
description = "A file manager with built-in SVN support"
authors = ["Developer"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.31"
log = "0.4"
env_logger = "0.11"
dirs = "5"
walkdir = "2"
glob = "0.3"
filetime = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
